// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a CclHomeProductsBlockView component home-product style 1`] = `
<div
  className="home-products-container"
>
  <a
    className="home-product"
    href="/example"
    id="home-product"
    onClick={[Function]}
    target={null}
    title={null}
  >
    <div
      className="home-product-title"
    >
      example title1
    </div>
    <div
      className="home-product-description"
    />
  </a>
  <a
    className="home-product"
    href="/example"
    id="home-product"
    onClick={[Function]}
    target={null}
    title={null}
  >
    <div
      className="home-product-title"
    >
      example title2
    </div>
    <div
      className="home-product-description"
    />
  </a>
</div>
`;

exports[`renders a CclHomeProductsBlockView component iconless style 1`] = `
<div
  className="home-products-container"
>
  <a
    className="home-product home-product-main"
    href="/example"
    id=""
    onClick={[Function]}
    target={null}
    title={null}
  >
    <h3>
      example title1
    </h3>
  </a>
  <a
    className="home-product home-product-main"
    href="/example"
    id=""
    onClick={[Function]}
    target={null}
    title={null}
  >
    <h3>
      example title2
    </h3>
  </a>
</div>
`;
